data/derived/comb/progs/unify/prog0185.ml.out
Characters 171-172:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a -> int * int -> int * 'a
       but an expression was expected of type 'a -> int * int -> 'a
       The type variable 'a occurs inside int * 'a
